update swagger and authetication for api orders
